--- a/dev/htmlTemplate/cardGroup.html
+++ b/dev/htmlTemplate/cardGroup.html
@@ -1,26 +1,24 @@
 <!-- 揪團卡片 -->
-<div class="card cardOriginalTem cardGroup" >
+<div v-for="group in groups" class="card cardOriginalTem cardGroup" >
     <a>
         <img src="./images/lake.jpg" class="card-img-top" >
         <div class="card-body card-img-overlay cardImgOverlayWebUse">
-            <h5 class="card-title cardTitleWebUse">揪團</h5>
+            <h5 class="card-title cardTitleWebUse">{{group.cardTitle}}</h5>
             <div class="mask">
-                <p class="card-text cardTextWebUse">日月潭<br>
-                    <span style="font-weight: 300;">九族文化村和健行步道</span>
-                </p>
+                <p class="card-text cardTextWebUse">{{group.Group_Title}}</p>
             </div>
         </div>
         <div>
             <div class="cardGroupContent">
-                <p>團主：愛旅行</p>
+                <p>團主：{{group.groupHost}}</p>
                 <div>
                     <p>團主評價：
                         <img src="./images/good.png" >
                     </p>
                 </div>
-                <p>出團日期：2020/06/30</p>
+                <p>出團日期：{{group.GroupStartDate}}</p>
                 <div>
-                    <p>報名截止：2020/06/30</p>
+                    <p>報名截止：{{group.GroupDeadline}}</p>
                     <a>
                         <img src="./images/heart.png">
                     </a>
