logout back to homepage

--- a/dev/htmlTemplate/nav.html
+++ b/dev/htmlTemplate/nav.html
@@ -42,7 +42,7 @@
       <div class="modal fade" id="loginForm" role="dialog">
         <div class="modal-dialog">
           <!-- 登入燈箱 -->
-          <div class="modal-content">
+          <div id="loginLightBox" class="modal-content">
               <form action="#" method="get" class="loginform">
                 <div class="loginall">
                 <div class="loginnamea">
